<resources>
    <string name="app_name">CardReservation</string>
    <string name="app_name_dev">CardReservation Test</string>
    <string name="ok">확인</string>
    <string name="resEmptymessage">EmptyMessage</string>
    <string name="sunday">일</string>
    <string name="monday">월</string>
    <string name="tuesday">화</string>
    <string name="wednesday">수</string>
    <string name="thursday">목</string>
    <string name="friday">금</string>
    <string name="saturday">토</string>

    <string name="addReservation">일정 추가</string>
    <string name="schedule_title">용도</string>
    <string name="start">시작</string>
    <string name="end">종료</string>
    <string name="slashFormattedDate">%1$d/%2$d/%3$d</string>
    <string name="formattedTime">%1$s:%2$s</string>
    <string name="estimated_money">예상 사용 금액</string>
    <string name="return_">반납하기</string>
    <string name="used_money">사용한 금액</string>
    <string name="user">사용자</string>
    <string name="cancel">취소</string>
    <string name="reserve">예약</string>
    <string name="reservation_password">예약 비밀번호</string>
    <string name="edit">수정</string>
    <string name="delete">삭제</string>
    <string name="returning">반납</string>
    <string name="setting">설정</string>
    <string name="account">계정</string>
    <string name="password">비밀번호</string>

    <string name="deleteConfirm">예약을 취소합니다.</string>
    <string name="returnConfirm">일정이 종료되었음을 알리세요!</string>
    <string name="loading">서버에 등록하는 중입니다...</string>
    <string name="checkPassword">암호를 확인하는 중입니다...</string>
    <string name="adminMode">관리모드</string>
    <string name="privatePassword">암호</string>
    <string name="noticeAboutAccount">관리자만 설정 가능합니다.</string>
</resources>