<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/panel_schedule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/toppanel_bg_rounded_custom"
        android:backgroundTint="@color/panelBackgroundColor"
        app:layout_constraintCircleRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/titleTIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:textColorHint="@color/gray"
            app:boxBackgroundColor="@color/panelBackgroundColor"
            app:hintAnimationEnabled="false"
            app:hintTextColor="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/titleIET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/schedule_title"
                android:textColor="@color/colorOnPrimary"
                android:textSize="25sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/typeTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:text="타입"
            android:textSize="21sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleTIL" />

        <Spinner
            android:id="@+id/typeSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:textAlignment="textEnd"
            app:layout_constraintStart_toEndOf="@+id/typeTV"
            app:layout_constraintTop_toTopOf="@id/typeTV" />

        <LinearLayout
            android:id="@+id/startTimeLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/typeTV">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/startTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/start"
                    android:textSize="21sp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/startDayTV"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/startDayTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="2021/01/01"
                    android:textSize="21sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/startTimeTV" />

                <TextView
                    android:id="@+id/startTimeTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="16:20"
                    android:textSize="21sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/startPickerLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:visibility="gone"
                tools:visibility="visible">

                <DatePicker

                    android:id="@+id/startDatePicker"

                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"

                    android:calendarViewShown="false"
                    android:datePickerMode="spinner" />

                <com.hongbaek.cardreservation.CustomTimePicker
                    android:id="@+id/startTimePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:timePickerMode="spinner">

                </com.hongbaek.cardreservation.CustomTimePicker>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/endTimeLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/startTimeLL">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/endTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/end"
                    android:textSize="21sp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/endDayTV"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/endDayTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="2021/01/01"
                    android:textSize="21sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/endTimeTV" />

                <TextView
                    android:id="@+id/endTimeTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="16:55"
                    android:textSize="21sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/endPickerLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:visibility="gone">

                <DatePicker

                    android:id="@+id/endDatePicker"

                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"

                    android:layout_gravity="center"

                    android:calendarViewShown="false"
                    android:datePickerMode="spinner" />

                <com.hongbaek.cardreservation.CustomTimePicker
                    android:id="@+id/endTimePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:timePickerMode="spinner">

                </com.hongbaek.cardreservation.CustomTimePicker>
            </LinearLayout>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</merge>